--- a/school_webpage.html
+++ b/school_webpage.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>TNG</head>
 <body>
-    <p>I study in <bold>TNG</bold></p>
+    <p>I study in <strong>TNG</strong></p>
     <p>It is located in <mark>Al Dayeen,Qatar</mark></p>
     <p>There are about <strong>400 </strong>students enrolled here</p>
     <p>The educational board is <i>cambridge</i></p>
